<?xml version="1.0" encoding="utf-8"?>
<Keyboard android:keyWidth="14.999998%p" android:keyHeight="@dimen/key_height" android:horizontalGap="0.0px" android:verticalGap="0.0px"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Row android:rowEdgeFlags="top">
        <Key android:keyEdgeFlags="left" android:keyOutputText="@string/popular_domain_9" android:keyLabel="@string/popular_domain_9" />
        <Key android:keyOutputText="@string/popular_domain_10" android:keyLabel="@string/popular_domain_10" />
        <Key android:keyOutputText="@string/popular_domain_11" android:keyLabel="@string/popular_domain_11" />
        <Key android:keyEdgeFlags="right" android:keyOutputText="@string/popular_domain_12" android:keyLabel="@string/popular_domain_12" />
    </Row>
    <Row>
        <Key android:keyEdgeFlags="left" android:keyOutputText="@string/popular_domain_1" android:keyLabel="@string/popular_domain_1" />
        <Key android:keyOutputText="@string/popular_domain_2" android:keyLabel="@string/popular_domain_2" />
        <Key android:keyOutputText="@string/popular_domain_3" android:keyLabel="@string/popular_domain_3" />
        <Key android:keyEdgeFlags="right" android:keyOutputText="@string/popular_domain_4" android:keyLabel="@string/popular_domain_4" />
    </Row>
    <Row android:rowEdgeFlags="bottom">
        <Key android:keyEdgeFlags="left" android:keyOutputText="@string/popular_domain_5" android:keyLabel="@string/popular_domain_5" />
        <Key android:keyOutputText="@string/popular_domain_6" android:keyLabel="@string/popular_domain_6" />
        <Key android:keyOutputText="@string/popular_domain_7" android:keyLabel="@string/popular_domain_7" />
        <Key android:keyEdgeFlags="right" android:keyOutputText="@string/popular_domain_8" android:keyLabel="@string/popular_domain_8" />
    </Row>
</Keyboard>